--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -328,7 +328,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:onClick="@{handlers::showCreated}">
 
                     <ImageView
                         style="@style/DiveCenterProfileCharacteristicIcon"
@@ -367,7 +368,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:onClick="@{handlers::showEdited}">
 
                     <ImageView
                         style="@style/DiveCenterProfileCharacteristicIcon"
