--- a/trunk/ddscanner/app/src/main/res/layout/dialog_yes_no.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_yes_no.xml
@@ -31,7 +31,8 @@
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp"
             android:gravity="center"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
@@ -48,7 +49,6 @@
                 android:id="@+id/no_button"
                 app:layout_widthPercent="50%"
                 android:layout_height="45dp"
-                android:layout_marginTop="25dp"
                 android:background="@drawable/dialog_no_button"
                 android:text="@string/no" />
 
@@ -58,7 +58,6 @@
                 android:id="@+id/yes_button"
                 app:layout_widthPercent="50%"
                 android:layout_height="45dp"
-                android:layout_marginTop="25dp"
                 android:background="@drawable/dialog_yes_button"
                 android:text="@string/yes" />
         </android.support.percent.PercentRelativeLayout>
