~ menu items fixes

--- a/trunk/ddscanner/app/src/main/res/menu/menu_details.xml
+++ b/trunk/ddscanner/app/src/main/res/menu/menu_details.xml
@@ -6,6 +6,7 @@
         android:id="@+id/menu_three_dots"
         android:orderInCategory="100"
         android:title="Profile"
+        android:visible="false"
         android:icon="@drawable/ic_ac_more"
         app:showAsAction= "ifRoom">
         <menu>
