--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ddscanner.ui.views.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="@dimen/image_in_divespot_small"
-    android:layout_height="@dimen/image_in_divespot_small"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleSmall"
@@ -32,4 +33,4 @@
         android:textSize="20sp"
         />
 
-</RelativeLayout>
+</com.ddscanner.ui.views.SquareLayout>
