--- a/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ddscanner.ui.views.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginRight="8dp">
     <ImageView
         android:id="@+id/image"
@@ -31,4 +31,4 @@
         android:gravity="center"
         android:textSize="20sp"
         />
-</RelativeLayout>
+</com.ddscanner.ui.views.SquareLayout>
