--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -124,7 +124,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#8b8b8b"
-                            android:text="@string/add_langueage"
+                            android:text="@string/add_language_subtitle"
                             android:textSize="12sp"/>
 
                     </LinearLayout>
