--- a/trunk/ddscanner/app/src/main/res/layout/item_list_language.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_list_language.xml
@@ -13,14 +13,18 @@
         />
 
     <ImageView
+        android:visibility="gone"
+        android:id="@+id/checking_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="20dp"
         android:src="@drawable/ic_list_check"/>
 
     <ImageView
         android:layout_alignParentBottom="true"
         style="@style/DividerStyleFull"
         />
+
 </RelativeLayout>
