--- a/trunk/ddscanner/app/src/main/res/menu/menu_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/menu/menu_search_sealife.xml
@@ -3,6 +3,7 @@
 
     <item android:id="@+id/action_search"
         android:title="Search"
+        android:visible="false"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always"/>
 
