--- a/trunk/ddscanner/app/src/main/res/layout/item_people.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_people.xml
@@ -17,6 +17,7 @@
             android:src="@drawable/avatar_checkin" />
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/creator_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
