--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -140,6 +140,7 @@
         <item name="android:layout_width">65dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:scaleType">center</item>
+        <item name="android:layout_marginTop">8dp</item>
     </style>
 
     <style name="CharacteristicsDiveSpotListTitle">
