--- a/trunk/ddscanner/app/src/main/res/layout/item_offer.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_offer.xml
@@ -2,7 +2,6 @@
 <layout>
 
     <data>
-
         <variable
             name="offerViewModel"
             type="com.ddscanner.screens.boocking.offers.OfferListItemViewModel" />
@@ -13,7 +12,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="178dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,8 +29,9 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="center"
-                    android:src="@drawable/ds_head_photo_default" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ds_head_photo_default"
+                    app:loadPhotoFrom="@{offerViewModel}"/>
                 
                 <TextView
                     android:layout_width="wrap_content"
