--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -52,7 +52,7 @@
 
     <color name="money_background">#f6f6f6</color>
     <color name="black_text">#202020</color>
-
+    <color name="subtitle_list_text_color">#616161</color>
     <color name="white">#FFFFFF</color>
 
     <color name="gray_bg">#f6f6f6</color>
