--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -384,4 +384,15 @@
         <item name="android:paddingTop">16dp</item>
     </style>
 
+    <style name="DefaultListTitleStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/black_text</item>
+    </style>
+
+    <style name="DefaultListSubtitleStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/subtitle_list_text_color</item>
+    </style>
+
 </resources>
