--- a/trunk/ddscanner/app/src/main/res/layout/activity_offers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_offers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:auto="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,10 +13,18 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true">
 
-            <include
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@color/primary"
+                android:minHeight="?actionBarSize"
+                android:transitionName="toolbar"
                 app:layout_collapseMode="pin"
+                android:titleTextColor="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                layout="@layout/view_toolbar" />
+                auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         </android.support.design.widget.AppBarLayout>
 
