--- a/trunk/ddscanner/app/src/main/res/layout/item_offers_divecenter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_offers_divecenter.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ddscanner.screens.boocking.offers.dailytours.DiveCenterListItemViewModel" />
+            type="com.ddscanner.screens.booking.offers.dailytours.DiveCenterListItemViewModel" />
     </data>
 
     <RelativeLayout
