--- a/trunk/ddscanner/app/src/main/res/layout/item_course.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_course.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="courseViewModel"
-            type="com.ddscanner.screens.boocking.offers.cources.CourseItemViewModel" />
+            type="com.ddscanner.screens.booking.offers.cources.CourseItemViewModel" />
     </data>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
