--- a/trunk/ddscanner/app/src/main/res/layout/item_offer.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_offer.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="offerViewModel"
-            type="com.ddscanner.screens.boocking.offers.dailytours.DailyToursListItemViewModel" />
+            type="com.ddscanner.screens.booking.offers.dailytours.DailyToursListItemViewModel" />
     </data>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
