--- a/trunk/ddscanner/app/src/main/res/layout/item_order.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_order.xml
@@ -108,6 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
+                        android:textColor="@colo/black_text"
                         android:fontFamily="sans-serif-medium"
                         android:text="@{orderViewModel.order.price}"/>
                 </LinearLayout>
