--- a/trunk/ddscanner/app/src/main/res/layout/item_order.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_order.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="orderViewModel"
-            type = "com.ddscanner.screens.booking.orders.OrderItemViewModel"/>
+            type="com.ddscanner.screens.booking.orders.OrderItemViewModel" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -36,13 +37,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_above="@+id/name"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="14dp"
                     android:text="@string/paid"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
                     android:textSize="14sp"
-                    android:layout_above="@+id/name"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginBottom="2dp"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/name"
@@ -54,11 +55,11 @@
                     android:layout_marginLeft="14dp"
                     android:layout_marginRight="14dp"
                     android:ellipsize="end"
-                    android:textColor="#ffcc00"
-                    android:textSize="18sp"
                     android:fontFamily="sans-serif-medium"
                     android:lines="1"
-                    android:text="@{orderViewModel.order.orderName}" />
+                    android:text="@{orderViewModel.order.orderName}"
+                    android:textColor="#ffcc00"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -96,21 +97,22 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_alignParentRight="true"
                     android:id="@+id/price_label"
-                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="18dp"
-                    android:background="@drawable/order_price_background">
+                    android:background="@drawable/order_price_background"
+                    android:padding="8dp">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textColor="@colo/black_text"
                         android:fontFamily="sans-serif-medium"
-                        android:text="@{orderViewModel.order.price}"/>
+                        android:text="@{orderViewModel.order.price}"
+                        android:textColor="@colo/black_text"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
